# fintech-analytics-platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  validacion data.ipynb
data/generators/: generate_data.py
src/utils/: config.py
